[tool.poetry]
name = "cds-tools"
version = "0.1.0"
description = ""
authors = ["José Lacerda <jose.lacerda@stone.com.br>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
